# catsketball

./: .pre-commit-config.yaml  Makefile  README.md  environment.yaml  out.txt  pyproject.backup  pyproject.toml  requirements.backup  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
catsketball/: Untitled.ipynb  app.py  constants.py  espn_stats.py  network_correlations.ipynb  scratchwork.ipynb  stat_analysis.py  styling.py
catsketball/staticdata/: 2023hashtagbasketballprojections.csv  FantasyPros_NBA_Fantasy_Basketball_Overall_2025-26_Average_Projections.csv  hashtagbballsnapshot.csv  nba_projections_full_1_77.csv  nba_schedule.csv  team_id_mappings.yaml
notebooks/: Untitled.ipynb  by_total.ipynb  draft_simulator.ipynb  points_league_exploration.ipynb  positional_comparison.ipynb  project_stats.ipynb  pull_schedule.ipynb
