[project]
name = "catsketball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
name = "catsketball"
version = "0.1.0"
description = ""
authors = ["Alex Yang <ayang41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.5"
streamlit = "^1.39.0"
pandas = "^2.2.3"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
lxml = "^5.3.0"
espn-api = "^0.43.0"
pyyaml = "^6.0.2"
colour = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
